package iutnc.s3c.sae_app_javafx;

import javafx.application.Application;

public class Launcher {
    public static void main(String[] args) {
        Application.launch(MainApplication.class, args);
    }
}
